kube-scan-lb.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-scan
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-scan
  namespace: kube-scan
  labels:
    app: kube-scan
spec:
  selector:
    matchLabels:
      app: kube-scan
  template:
    metadata:
      labels:
        app: kube-scan
    spec:
      containers:
        - name: kube-scan-ui
          image: octarinesec/kubescan-scanner-ui:20.5
          imagePullPolicy: Always
        - name: kube-scan
          image: octarinesec/kubescan-scanner:20.5
          imagePullPolicy: Always
          volumeMounts:
            - name: config
              mountPath: /etc/kubescan
      volumes:
        - name: config
          configMap:
            name: kube-scan
            defaultMode: 420
      serviceAccountName: kube-scan
---
apiVersion: v1
kind: Service
metadata:
  name: kube-scan-ui
  namespace: kube-scan
  labels:
    app: kube-scan
spec:
  ports:
    - name: kube-scan-ui
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: kube-scan
  type: ClusterIP

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-scan
  namespace: kube-scan
spec:
  rules:
  - host: scan.sysage.lab
    http:
      paths:
      - backend:
          serviceName: kube-scan-ui
          servicePort: 80
